index: fix overflow caused by animation

--- a/_sass/pages/index.scss
+++ b/_sass/pages/index.scss
@@ -213,7 +213,7 @@ section {
   color: $light;
   line-height: 1;
   padding: 8px 0;
-  Margin-right: 4px;
+  margin-right: 4px;
   border-radius: 50%;
   text-align: center;
   width: 56px;
